# directory-ocr

./: .gitignore  QUICKSTART.md  README.md  config.yaml  llm-config.json  llm-config.toml  llm-config.yaml  pyproject.toml  start-llm.sh  tmuxp.yaml
.github/: copilot-instructions.md
data/errors/: .gitkeep
data/incoming/: .gitkeep
data/output/: .gitkeep
data/processed/: .gitkeep
src/: __init__.py  config.py  file_processor.py  llm_client.py  main.py  text_extractor.py  watcher.py
